Most page layout fixed. Still no access to shift.

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -16,11 +16,8 @@ nav {
 }
 
 .title-bar {
+  width: 100% !important;
   height: 98px;
   color: #fff;
   background-color: #888888 !important;
-}
-
-.title-bar h2 {
-  padding: 68px 24px;
 }
